--- a/agents-and-function-calling/open-source-agents/langgraph/00_data_prep.ipynb
+++ b/agents-and-function-calling/open-source-agents/langgraph/00_data_prep.ipynb
@@ -16,20 +16,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting faker\n",
-      "  Downloading Faker-30.1.0-py3-none-any.whl.metadata (15 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.4 in /Users/jagdsoni/Desktop/TFC/code/bedrock-oss/.venv/lib/python3.11/site-packages (from faker) (2.9.0.post0)\n",
-      "Requirement already satisfied: typing-extensions in /Users/jagdsoni/Desktop/TFC/code/bedrock-oss/.venv/lib/python3.11/site-packages (from faker) (4.12.2)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/jagdsoni/Desktop/TFC/code/bedrock-oss/.venv/lib/python3.11/site-packages (from python-dateutil>=2.4->faker) (1.16.0)\n",
-      "Downloading Faker-30.1.0-py3-none-any.whl (1.8 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m19.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: faker\n",
-      "Successfully installed faker-30.1.0\n"
+      "{'langgraph': {'resource_dir': '/Users/johnhall/Library/Jupyter/kernels/langgraph', 'spec': {'argv': ['/Users/johnhall/Documents/edu/LangGraph/.venv/bin/python', '-Xfrozen_modules=off', '-m', 'ipykernel_launcher', '-f', '{connection_file}'], 'env': {'PATH': '/Users/johnhall/Documents/edu/LangGraph/.venv/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin'}, 'display_name': 'Python 3 (ipykernel)', 'language': 'python', 'interrupt_mode': 'signal', 'metadata': {'debugger': True}, 'kernel_protocol_version': ''}}, 'python3': {'resource_dir': '/Users/johnhall/Documents/edu/aws/amazon-bedrock-samples/.venv/share/jupyter/kernels/python3', 'spec': {'argv': ['python', '-m', 'ipykernel_launcher', '-f', '{connection_file}'], 'env': {}, 'display_name': 'Python 3 (ipykernel)', 'language': 'python', 'interrupt_mode': 'signal', 'metadata': {'debugger': True}, 'kernel_protocol_version': ''}}}\n",
+      "=== Python Environment ===\n",
+      "Python executable: /Users/johnhall/Documents/edu/aws/amazon-bedrock-samples/.venv/bin/python\n",
+      "Python PATH env var: /Users/johnhall/Documents/edu/aws/amazon-bedrock-samples/.venv/bin:/Users/johnhall/.antigravity/antigravity/bin:/usr/local/texlive/2025/bin/universal-darwin:/Users/johnhall/.pyenv/shims:/Users/johnhall/.nvm/versions/node/v23.11.1/bin:/Users/johnhall/.local/bin:/usr/local/bin:/usr/local/bin:/System/Cryptexes/App/usr/bin:/usr/bin:/bin:/usr/sbin:/sbin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin:/opt/pmk/env/global/bin:/opt/X11/bin:/Library/Apple/usr/bin:/Library/TeX/texbin:/usr/local/go/bin:/opt/homebrew/bin:/Applications/quarto/bin:/Users/johnhall/.bin:/Users/johnhall/Library/Scripts:/Users/johnhall/go/bin:/Users/johnhall/Library/Application Support/JetBrains/Toolbox/Scripts:/Users/johnhall/Library/Application Support/JetBrains/Toolbox/Scripts:/Users/johnhall/.lmstudio/bin:/Users/johnhall/.lmstudio/bin\n",
+      "\n",
+      "=== Shell Environment ===\n",
+      "Shell PATH: /Users/johnhall/Documents/edu/aws/amazon-bedrock-samples/.venv/bin:/Users/johnhall/.antigravity/antigravity/bin:/usr/local/texlive/2025/bin/universal-darwin:/Users/johnhall/.pyenv/shims:/Users/johnhall/.nvm/versions/node/v23.11.1/bin:/Users/johnhall/.local/bin:/usr/local/bin:/usr/local/bin:/System/Cryptexes/App/usr/bin:/usr/bin:/bin:/usr/sbin:/sbin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin:/opt/pmk/env/global/bin:/opt/X11/bin:/Library/Apple/usr/bin:/Library/TeX/texbin:/usr/local/go/bin:/opt/homebrew/bin:/Applications/quarto/bin:/Users/johnhall/.bin:/Users/johnhall/Library/Scripts:/Users/johnhall/go/bin:/Users/johnhall/Library/Application Support/JetBrains/Toolbox/Scripts:/Users/johnhall/Library/Application Support/JetBrains/Toolbox/Scripts:/Users/johnhall/.lmstudio/bin:/Users/johnhall/.lmstudio/bin\n",
+      "\n",
+      "=== Looking for python in shell ===\n",
+      "Result: python is /Users/johnhall/Documents/edu/aws/amazon-bedrock-samples/.venv/bin/python\n",
+      "Requirement already satisfied: faker in /Users/johnhall/Documents/edu/aws/amazon-bedrock-samples/.venv/lib/python3.13/site-packages (40.1.2)\n",
+      "Requirement already satisfied: faker in /Users/johnhall/Documents/edu/aws/amazon-bedrock-samples/.venv/lib/python3.13/site-packages (40.1.2)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['/Users/johnhall/Documents/edu/aws/amazon-bedrock-samples/.venv/bin/python', '-m', 'pip', 'install', 'faker'], returncode=0)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!pip install faker"
+    "import jupyter_client\n",
+    "jupyter_client.find_connection_file()\n",
+    "\n",
+    "\n",
+    "# List all kernel specs\n",
+    "ksm = jupyter_client.kernelspec.KernelSpecManager()\n",
+    "print(ksm.get_all_specs())\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "import subprocess\n",
+    "\n",
+    "\n",
+    "print(\"=== Python Environment ===\")\n",
+    "print(f\"Python executable: {os.sys.executable}\")\n",
+    "print(f\"Python PATH env var: {os.environ.get('PATH')}\")\n",
+    "\n",
+    "print(\"\\n=== Shell Environment ===\")\n",
+    "result = subprocess.run(\n",
+    "    [\"bash\", \"-c\", \"echo $PATH\"],\n",
+    "    capture_output=True,\n",
+    "    text=True\n",
+    ")\n",
+    "print(f\"Shell PATH: {result.stdout.strip()}\")\n",
+    "\n",
+    "print(\"\\n=== Looking for python in shell ===\")\n",
+    "result = subprocess.run(\n",
+    "    [\"bash\", \"-c\", \"type python || which python || echo 'NOT FOUND'\"],\n",
+    "    capture_output=True,\n",
+    "    text=True\n",
+    ")\n",
+    "print(f\"Result: {result.stdout.strip()}\")\n",
+    "if result.stderr:\n",
+    "    print(f\"Error: {result.stderr.strip()}\")\n",
+    "    # === Looking for python in shell ===\n",
+    "    # Result: NOT FOUND\n",
+    "    # Error: bash: line 0: type: python: not found\n",
+    "\n",
+    "!python -m pip install faker\n",
+    "\n",
+    "subprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"faker\"], check=True)"
    ]
   },
   {
@@ -649,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
