hide lang graph api key

--- a/agents-and-function-calling/open-source-agents/langgraph/langgraph-single-agent.ipynb
+++ b/agents-and-function-calling/open-source-agents/langgraph/langgraph-single-agent.ipynb
@@ -209,7 +209,7 @@
     {
      "data": {
       "text/plain": [
-       "'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'"
+       "'lsv2_***'"
       ]
      },
      "execution_count": null,
